[ Bug fixed ] : UI is not consistent when query name is large in query panel header (#5098)
* truncate the query name excedding 20 letters in the query panel header

* made the suggested changes

* bug fixed

--- a/frontend/src/_styles/queryManager.scss
+++ b/frontend/src/_styles/queryManager.scss
@@ -214,6 +214,12 @@ $border-radius: 4px;
       .query-manager-header-query-name{
         color: $color-light-slate-12;
       }
+      .ellipsis{
+        width: 100px; 
+        white-space: nowrap;
+        overflow: hidden; 
+        text-overflow: ellipsis;
+      }
       .query-header-buttons{
         gap: 8px;
       }
